force-app/main/default/objects/Bid_SE__c/fields/Apps__c.field-meta.xml
<CustomField>
    <fullName>Apps__c</fullName>
    <formula>IF(OR(INCLUDES( Opportunity__r.Business_Unit_SE__c , &quot;Apps&quot;),INCLUDES( Opportunity__r.Business_Unit_SE__c , &quot;BVS&quot;)), true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apps</label>
    <type>Checkbox</type>
</CustomField>