force-app/main/default/objects/Bid_SE__c/fields/BID_Is_Replaced__c.field-meta.xml
<CustomField>
    <fullName>BID_Is_Replaced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that Bid has been replaced by another Bid. Used for formula field Account name</description>
    <label>BID Is Replaced</label>
    <type>Checkbox</type>
</CustomField>