force-app/main/default/objects/Bid_SE__c/fields/DPS__c.field-meta.xml
<CustomField>
    <fullName>DPS__c</fullName>
    <formula>IF(INCLUDES( Opportunity__r.Business_Unit_SE__c , &quot;DPS&quot;), true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DPS</label>
    <type>Checkbox</type>
</CustomField>