force-app/main/default/objects/Bid_SE__c/fields/East__c.field-meta.xml
<CustomField>
    <fullName>East__c</fullName>
    <formula>IF(INCLUDES( Opportunity__r.Business_Unit_SE__c , &quot;East&quot;), true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>East</label>
    <type>Checkbox</type>
</CustomField>