force-app/main/default/objects/Bid_SE__c/fields/North__c.field-meta.xml
<CustomField>
    <fullName>North__c</fullName>
    <formula>IF(INCLUDES( Opportunity__r.Business_Unit_SE__c , &quot;North&quot;), true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>North</label>
    <type>Checkbox</type>
</CustomField>