force-app/main/default/objects/Bid_SE__c/fields/Proposal_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Due_Date__c</fullName>
    <formula>Opportunity__r.Proposal_Due_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposal Due Date</label>
    <type>DateTime</type>
</CustomField>