force-app/main/default/objects/Bid_SE__c/fields/West__c.field-meta.xml
<CustomField>
    <fullName>West__c</fullName>
    <formula>IF(INCLUDES( Opportunity__r.Business_Unit_SE__c , &quot;West&quot;), true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>West</label>
    <type>Checkbox</type>
</CustomField>